<resources>
    <string name="app_name">LuckyNumber</string>
    <string name="your_lucky_number_is">Your Lucky Number is:</string>
    <string name="_888">888</string>
    <string name="share_my_lucky_nuber">share my lucky number</string>
    <string name="welcome_to_lucky_number">Welcome to Lucky Number</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="wish_me_a_luck">Wish me a Luck!</string>
</resources>