<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".SecondActivity">

    <TextView
        android:textColor="@color/white"
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_lucky_number_is"
        android:textSize="32sp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="46dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lucky_number_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="140dp"
        android:text="@string/_888"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/share_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="224dp"
        android:text="@string/share_my_lucky_nuber"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>